[project]
name = "coffee-roulette" 
authors = [{name = "Zane Mitrevica", email= "zane.mitrevica@gmail.com"}]
description = "Generates pseudo-random pairings"
readme = "README.md"
requires-python = ">=3.8.0"
dynamic = ["version"]

license = {text = "BSD-3-Clause"}

dependencies = [
    "numpy",
    "pandas",
    "tabulate",
    "ruamel.yaml",
]

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"
[tool.setuptools_scm]